# dioxus-wallet-adapter

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.js  main.js.LICENSE.txt
assets/js/: package-lock.json  package.json
assets/js/src/: main.js
js/: package-lock.json  package.json  webpack.config.js
js/src/: main.js
src/: main.rs
src/hooks/: mod.rs  use_wallet_adapter.rs
wallet-adapter/: package-lock.json  package.json
wallet-adapter/src/: main.js
