[package]
name = "dioxus-wallet-adapter"
version = "0.1.0"
authors = ["alex <aabinaei@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
log = "0.4.21"
