[package]
name = "dioxus-wallet-adapter"
version = "0.1.0"
authors = ["mrmizz <bigtimetapin@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5.0"
gloo = { version = "0.11.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
js-sys = { version = "0.3.67", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
solana-client-wasm = { version = "1.18", path = "../solana-playground/wasm/solana-client" }
solana-extra-wasm = { version = "1.18", path = "../solana-playground/wasm/utils/solana-extra" }
wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
web-time = { version = "1.0.0", optional = true }
tracing = "0.1.40"
serde_json = "1.0.118"


[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'console',
  'Clipboard',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  'MessageEvent',
  'Navigator',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerType',
  'WorkerGlobalScope',
]
