[package]
name = "dioxus-wallet-adapter"
version = "0.1.0"
authors = ["mrmizz <bigtimetapin@gmail.com>"]
edition = "2021"

[dependencies]
async-std = "1.12.0"
base64 = "0.22.1"
bincode = "1.3.3"
dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev = "ffa36a6", features = ["web"] }
dioxus-logger = { version = "0.5.1" }
solana-client-wasm = { version = "1.18", path = "../solana-playground/wasm/solana-client" }
solana-extra-wasm = { version = "1.18", path = "../solana-playground/wasm/utils/solana-extra" }
web-time = "1.0.0"
tracing = "0.1.40"
serde_json = "1.0.118"


